--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <jackson.dataformat.version>2.13.3</jackson.dataformat.version>
         <lombok.version>1.18.24</lombok.version>
         <selenide.version>6.6.6</selenide.version>
+
     </properties>
 
     <dependencies>
@@ -68,6 +69,18 @@
             <version>${selenide.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>5.2.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -108,6 +121,8 @@
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectj.version}</version>
                     </dependency>
+
+
                 </dependencies>
             </plugin>
             <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
